--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" th:src="@{/webjars/materializecss/js/materialize.min.js}"></script>
 
     <!-- css -->
-    <link rel="stylesheet" type="text/css" th:href="@{/static/css/main.css}"/>
+    <!--<link rel="stylesheet" type="text/css" th:href="@{/static/css/main.css}"/>-->
 
     <!-- js -->
     <script th:src="@{/static/js/utils/materialize-functions.js}"></script>
