--- a/src/main/resources/templates/user/my.html
+++ b/src/main/resources/templates/user/my.html
@@ -4,7 +4,7 @@
 <head th:replace="fragments/head :: head(~{::title},~{::link}, ~{::script})">
     <title>Персональные данные</title>
 
-    <link rel="stylesheet" type="text/css" th:href="@{/static/css/form.css}"/>
+    <!--<link rel="stylesheet" type="text/css" th:href="@{/static/css/form.css}"/>-->
 
     <script th:src="@{/static/js/validate_fields.js}"></script>
     <script th:src="@{/static/js/users/controller.js}"></script>
