--- a/src/main/resources/templates/admin/user/edit.html
+++ b/src/main/resources/templates/admin/user/edit.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
 <head th:replace="fragments/head :: head(~{::title},~{::link}, ~{::script})">
-    <title>Изменение пользователя</title>
+    <title th:text="|Изменение пользователя|"></title>
 
-    <link rel="stylesheet" type="text/css" th:href="@{/static/css/form.css}"/>
+    <!--<link rel="stylesheet" type="text/css" th:href="@{/static/css/form.css}"/>-->
 
     <script th:src="@{/static/js/validate_fields.js}"></script>
     <script th:src="@{/static/js/admin/users/service.js}"></script>
