--- a/src/main/resources/templates/admin/user/list.html
+++ b/src/main/resources/templates/admin/user/list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
 <head th:replace="fragments/head :: head(~{::title},~{::link}, ~{::script})">
-    <title>Реестр пользователей</title>
+    <title th:text="|Реестр пользователей|"></title>
 
     <!--<link rel="stylesheet" type="text/css" th:href="@{/static/css/filter.css}"/>-->
 
@@ -21,7 +21,7 @@
                 <div th:replace="fragments/filter :: filter('/admin/users')"></div>
             </div>
             <div class="card">
-                <table class="bordered responsive-table">
+                <table class="bordered responsive-table highlight">
                     <thead>
                     <tr>
                         <th>ФИО</th>
